--- a/package.json
+++ b/package.json
@@ -5,17 +5,25 @@
   "description": "Post SonarQube Quality Gate results to Slack channel",
   "scripts": {
     "build": "rollup -c",
-    "start": "yarn build && act workflow_dispatch -W .github/workflows/sonarqube-slack-integration-test.yaml"
+    "start": "yarn build && act workflow_dispatch -W .github/workflows/sonarqube-slack-integration-test.yaml",
+    "test": "jest"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-typescript": "^7.17.12",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
+    "@types/jest": "^28.1.1",
     "@types/node": "^17.0.41",
+    "babel-jest": "^28.1.1",
     "eslint": "^8.17.0",
+    "jest": "^28.1.1",
     "prettier": "^2.6.2",
     "rollup": "^2.75.6",
+    "ts-jest": "^28.0.5",
     "tslib": "^2.4.0",
     "typescript": "^4.7.3"
   },
